@@ -25,13 +25,13 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
     compileOnly 'org.projectlombok:lombok:1.18.36'
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
-    implementation 'javax.xml.bind:jaxb-api:2.3.1'
     testImplementation 'javax.servlet:javax.servlet-api:3.1.0'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.spockframework:spock-core:2.4-groovy-4.0'
     testImplementation 'org.apache.groovy:groovy-all:4.0.24'
     testImplementation 'net.bytebuddy:byte-buddy:1.17.5'
     testRuntimeOnly 'org.objenesis:objenesis:3.3'
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.13.0'
 }
 
 sourceSets {
@@ -72,6 +72,8 @@ task intTest(type: Test) {
 
 test {
     useJUnitPlatform()
+    // Needed for XmlGenDom to set detailMessage on JDK exception classes via reflection
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
     testLogging {
         events 'started', 'passed', 'failed'
     }
